parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__ellipsis_statement-3.snap
---
source: parser/src/parser/parser.rs
description: a = ...
---
Module {
    node: Node {
        start: 0,
        end: 7,
    },
    body: [
        AssignStatement(
            Assign {
                node: Node {
                    start: 0,
                    end: 7,
                },
                targets: [
                    Name(
                        Name {
                            node: Node {
                                start: 0,
                                end: 1,
                            },
                            id: "a",
                        },
                    ),
                ],
                value: Constant(
                    Constant {
                        node: Node {
                            start: 4,
                            end: 7,
                        },
                        value: Ellipsis,
                    },
                ),
            },
        ),
    ],
}
