parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__ellipsis_statement.snap
---
source: parser/src/parser/parser.rs
description: "def a(): ..."
---
Module {
    node: Node {
        start: 0,
        end: 12,
    },
    body: [
        FunctionDef(
            FunctionDef {
                node: Node {
                    start: 0,
                    end: 12,
                },
                name: "a",
                args: Arguments {
                    node: Node {
                        start: 6,
                        end: 6,
                    },
                    posonlyargs: [],
                    args: [],
                    vararg: None,
                    kwonlyargs: [],
                    kw_defaults: [],
                    kwarg: None,
                    defaults: [],
                },
                body: [
                    ExpressionStatement(
                        Constant(
                            Constant {
                                node: Node {
                                    start: 9,
                                    end: 12,
                                },
                                value: ...,
                            },
                        ),
                    ),
                ],
                decorator_list: [],
                returns: None,
                type_comment: None,
            },
        ),
    ],
}
