parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__for_statement-3.snap
---
source: parser/src/parser/parser.rs
description: "for a in range(10):\n    a = 1\nelse:\n    b = 1"
---
Module {
    node: Node {
        start: 0,
        end: 45,
    },
    body: [
        ForStatement(
            For {
                node: Node {
                    start: 0,
                    end: 45,
                },
                target: Name(
                    Name {
                        node: Node {
                            start: 4,
                            end: 5,
                        },
                        id: "a",
                    },
                ),
                iter: Call(
                    Call {
                        node: Node {
                            start: 9,
                            end: 18,
                        },
                        func: Name(
                            Name {
                                node: Node {
                                    start: 9,
                                    end: 14,
                                },
                                id: "range",
                            },
                        ),
                        args: [
                            Constant(
                                Constant {
                                    node: Node {
                                        start: 15,
                                        end: 17,
                                    },
                                    value: Int(
                                        "10",
                                    ),
                                },
                            ),
                        ],
                        keywords: [],
                        starargs: None,
                        kwargs: None,
                    },
                ),
                body: [
                    AssignStatement(
                        Assign {
                            node: Node {
                                start: 24,
                                end: 29,
                            },
                            targets: [
                                Name(
                                    Name {
                                        node: Node {
                                            start: 24,
                                            end: 25,
                                        },
                                        id: "a",
                                    },
                                ),
                            ],
                            value: Constant(
                                Constant {
                                    node: Node {
                                        start: 28,
                                        end: 29,
                                    },
                                    value: Int(
                                        "1",
                                    ),
                                },
                            ),
                        },
                    ),
                ],
                orelse: [
                    AssignStatement(
                        Assign {
                            node: Node {
                                start: 40,
                                end: 45,
                            },
                            targets: [
                                Name(
                                    Name {
                                        node: Node {
                                            start: 40,
                                            end: 41,
                                        },
                                        id: "b",
                                    },
                                ),
                            ],
                            value: Constant(
                                Constant {
                                    node: Node {
                                        start: 44,
                                        end: 45,
                                    },
                                    value: Int(
                                        "1",
                                    ),
                                },
                            ),
                        },
                    ),
                ],
            },
        ),
    ],
}
