parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__fstring-2.snap
---
source: parser/src/parser/parser.rs
description: "f'hello_{a}'"
---
Module {
    node: Node {
        start: 0,
        end: 12,
    },
    body: [
        ExpressionStatement(
            JoinedStr(
                JoinedStr {
                    node: Node {
                        start: 0,
                        end: 12,
                    },
                    values: [
                        Constant(
                            Constant {
                                node: Node {
                                    start: 2,
                                    end: 8,
                                },
                                value: "hello_",
                            },
                        ),
                        FormattedValue(
                            FormattedValue {
                                node: Node {
                                    start: 8,
                                    end: 11,
                                },
                                value: Name(
                                    Name {
                                        node: Node {
                                            start: 9,
                                            end: 10,
                                        },
                                        id: "a",
                                    },
                                ),
                                conversion: -1,
                                format_spec: None,
                            },
                        ),
                    ],
                },
            ),
        ),
    ],
}
