parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__fstring-3.snap
---
source: parser/src/parser/parser.rs
description: "f'hello_{a} {b}'"
---
Module {
    node: Node {
        start: 0,
        end: 16,
    },
    body: [
        ExpressionStatement(
            JoinedStr(
                JoinedStr {
                    node: Node {
                        start: 0,
                        end: 16,
                    },
                    values: [
                        Constant(
                            Constant {
                                node: Node {
                                    start: 0,
                                    end: 8,
                                },
                                value: "hello_",
                            },
                        ),
                        Name(
                            Name {
                                node: Node {
                                    start: 9,
                                    end: 10,
                                },
                                id: "a",
                            },
                        ),
                        Constant(
                            Constant {
                                node: Node {
                                    start: 0,
                                    end: 12,
                                },
                                value: " ",
                            },
                        ),
                        Name(
                            Name {
                                node: Node {
                                    start: 13,
                                    end: 14,
                                },
                                id: "b",
                            },
                        ),
                    ],
                },
            ),
        ),
    ],
}
