parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__fstring-4.snap
---
source: parser/src/parser/parser.rs
description: "f'hello_{a} {b} {c}'"
---
Module {
    node: Node {
        start: 0,
        end: 20,
    },
    body: [
        ExpressionStatement(
            JoinedStr(
                JoinedStr {
                    node: Node {
                        start: 0,
                        end: 20,
                    },
                    values: [
                        Constant(
                            Constant {
                                node: Node {
                                    start: 0,
                                    end: 8,
                                },
                                value: "hello_",
                            },
                        ),
                        FormattedValue(
                            FormattedValue {
                                node: Node {
                                    start: 0,
                                    end: 0,
                                },
                                value: Name(
                                    Name {
                                        node: Node {
                                            start: 9,
                                            end: 10,
                                        },
                                        id: "a",
                                    },
                                ),
                                conversion: -1,
                                format_spec: None,
                            },
                        ),
                        Constant(
                            Constant {
                                node: Node {
                                    start: 0,
                                    end: 12,
                                },
                                value: " ",
                            },
                        ),
                        FormattedValue(
                            FormattedValue {
                                node: Node {
                                    start: 0,
                                    end: 0,
                                },
                                value: Name(
                                    Name {
                                        node: Node {
                                            start: 13,
                                            end: 14,
                                        },
                                        id: "b",
                                    },
                                ),
                                conversion: -1,
                                format_spec: None,
                            },
                        ),
                        Constant(
                            Constant {
                                node: Node {
                                    start: 0,
                                    end: 16,
                                },
                                value: " ",
                            },
                        ),
                        FormattedValue(
                            FormattedValue {
                                node: Node {
                                    start: 0,
                                    end: 0,
                                },
                                value: Name(
                                    Name {
                                        node: Node {
                                            start: 17,
                                            end: 18,
                                        },
                                        id: "c",
                                    },
                                ),
                                conversion: -1,
                                format_spec: None,
                            },
                        ),
                    ],
                },
            ),
        ),
    ],
}
